Improvements based on stuff learnt from fitie.js * Added property copy from child to parent node. * Removed the use of Number() and getBoundingClientRect(). * Some logic simplifications.

--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
     <div>
         <div class="video-wrapper">
             <video controls class="fill">
-                <source src="test-video.mp4" type="video/mp4">
+                <source src="test-video.mp4" type="video/mp4" preload="none">
             </video>
         </div>
         <div class="video-wrapper narrow">
             <video controls class="narrow fill">
-                <source src="test-video.mp4" type="video/mp4">
+                <source src="test-video.mp4" type="video/mp4" preload="none">
             </video>
         </div>
     </div>
@@ -87,12 +87,12 @@
     <div>
         <div class="video-wrapper">
             <video controls class="contain">
-                <source src="test-video.mp4" type="video/mp4">
+                <source src="test-video.mp4" type="video/mp4" preload="none">
             </video>
         </div>
         <div class="video-wrapper narrow">
             <video controls class="narrow contain">
-                <source src="test-video.mp4" type="video/mp4">
+                <source src="test-video.mp4" type="video/mp4" preload="none">
             </video>
         </div>
     </div>
@@ -109,12 +109,12 @@
     <div>
         <div class="video-wrapper">
             <video controls class="cover">
-                <source src="test-video.mp4" type="video/mp4">
+                <source src="test-video.mp4" type="video/mp4" preload="none">
             </video>
         </div>
         <div class="video-wrapper narrow">
             <video controls class="narrow cover">
-                <source src="test-video.mp4" type="video/mp4">
+                <source src="test-video.mp4" type="video/mp4" preload="none">
             </video>
         </div>
     </div>
@@ -131,12 +131,12 @@
     <div>
         <div class="video-wrapper">
             <video controls class="none">
-                <source src="test-video.mp4" type="video/mp4">
+                <source src="test-video.mp4" type="video/mp4" preload="none">
             </video>
         </div>
         <div class="video-wrapper narrow">
             <video controls class="narrow none">
-                <source src="test-video.mp4" type="video/mp4">
+                <source src="test-video.mp4" type="video/mp4" preload="none">
             </video>
         </div>
     </div>
@@ -153,11 +153,11 @@
     <div>
         <div class="video-wrapper">
             <video controls class="scale-down">
-                <source src="test-video.mp4" type="video/mp4">
+                <source src="test-video.mp4" type="video/mp4" preload="none">
             </video>
         </div>
         <div class="video-wrapper narrow">
-            <video controls class="narrow scale-down">
+            <video controls class="narrow scale-down" preload="none">
                 <source src="test-video.mp4" type="video/mp4">
             </video>
         </div>
